links on company advantages

--- a/public/src/css/style.scss
+++ b/public/src/css/style.scss
@@ -3102,6 +3102,11 @@ section,
                     }
                 }
 
+                a {
+                    text-decoration: none;
+                    color: #0E2845;
+                }
+
                 .value {
                     display: block;
                     font-size: 36px;
