fix stores js-fadeout bug

--- a/src/site/templates/company/company__stores.htm
+++ b/src/site/templates/company/company__stores.htm
@@ -5,7 +5,7 @@
                 <h1>{{TITLE}}</h1>
 
                 <div class="navigation">
-                    <ul class="js-fadeout">
+                    <ul class="js-fadeout" data-mobile-only="true">
                         {{NAVIGATION}}
                     </ul>
                 </div>
