--- a/src/site/templates/company/company.htm
+++ b/src/site/templates/company/company.htm
@@ -17,6 +17,8 @@
                 </main><!--
 
                 --><aside class="col-r">
+                    {{VIDEO}}
+
                     {{ADVANTAGES}}
                 </aside>
             </div>
