--- a/src/site/templates/layout/layout.htm
+++ b/src/site/templates/layout/layout.htm
@@ -19,7 +19,7 @@
 	<meta name="msapplication-config" content="/assets/images/browserconfig.xml?v2">
 	<meta name="theme-color" content="#ffffff">
 	<title>{{PAGE:TITLE}} | {{SETTINGS:SITE_TITLE}}</title>
-	<link type="text/css" rel="stylesheet" href="/assets/css/style.css{{VERSION}}"/>
+	<link rel="stylesheet" href="/assets/css/style.css{{VERSION}}"/>
 </head>
 
 <body>
@@ -39,8 +39,22 @@
 
 	<div class="modal-fadeout"></div>
 
-    <script type="text/javascript" src="/assets/js/scripts.js{{VERSION}}"></script>
-  	<script type="text/javascript" src="/engine/js/cart.actions.js?v2"></script>
-  	<script type="text/javascript" src="//api-maps.yandex.ru/2.1/?lang=ru_RU"></script>
+	{{MODALS}}
+
+    <script src="/assets/js/scripts.js{{VERSION}}"></script>
+  	<script src="/engine/js/cart.actions.js?v2"></script>
+  	<script src="//api-maps.yandex.ru/2.1/?lang=ru_RU"></script>
+  	<script type="text/javascript">
+  		if (document.getElementById('js-youtube-video')) {
+  			function onYouTubeIframeAPIReady() {
+				var player = new YT.Player('js-youtube-video', {
+				    height: '100%',
+				    width: '100%'
+				});
+				$('#js-youtube-video').data('player', player);
+			}
+  		}
+  	</script>
+  	<script src="//www.youtube.com/iframe_api"></script>
 </body>
 </html>
