Video block language switcher

--- a/src/site/templates/modals/modal_video.htm
+++ b/src/site/templates/modals/modal_video.htm
@@ -1,3 +1,9 @@
 <div class="video-container">
 	<div id="js-youtube-video"></div>
 </div>
+<div id="video-lang-swticher">
+		<ul>
+			<li><a href="{{CODERUS}}" data-lang="ru">Ру</a></li>
+			<li><a href="{{CODEENG}}" data-lang="en">En</a></li>
+		</ul>
+	</div>
