--- a/public/src/css/style.scss
+++ b/public/src/css/style.scss
@@ -6725,7 +6725,7 @@ section,
         #modal-video > & {
             padding: 0;
             width: 70%;
-            margin: 3% auto;
+            margin: 1% auto 2%;
 
             .video-container {
                 position: relative;
@@ -6745,6 +6745,64 @@ section,
                     position: absolute;
                     top: 0;
                     left: 0;
+                }
+            }
+
+            #video-lang-swticher {
+                position: absolute;
+                bottom: -75px;
+                left: 50%;
+                transform: translateX(-50%);
+
+                @media (max-width: $adaptive-width-tablet) {
+                    bottom: auto;
+                    top: 7%;
+                }
+
+                & > ul {
+                    display: block;
+                    font-size: 0;
+
+                    & > li {
+                        display: inline-block;
+
+                        & > a {
+                            display: inline-block;
+                            padding: 12px 16px;
+                            text-transform: uppercase;
+                            text-align: center;
+                            font-size: 17px;
+                            font-weight: 600;
+                            text-decoration: none;
+                            background-color: #fff;
+
+                            @media (max-width: $adaptive-width-tablet) {
+                                font-size: 15px;
+                            }
+
+                            @media (max-width: $adaptive-width-mobile) {
+                                padding: 9px 12px;
+                            }
+
+                            &.curr {
+                                background-color: #1D68B9;
+                                color: #fff;
+                                cursor: default;
+                            }
+                        }
+
+                        &:first-child {
+                            & > a {
+                                @include radius-l(6px);
+                            }
+                        }
+
+                        &:last-child {
+                            & > a {
+                                @include radius-r(6px);
+                            }
+                        }
+                    }
                 }
             }
         }
