--- a/src/site/templates/video/bl-video-main.htm
+++ b/src/site/templates/video/bl-video-main.htm
@@ -1,5 +1,5 @@
 <div id="bl-video" class="main holder">
-            <a href="#modal-video" class="js-modal-link" rel="nofollow" data-video-code="{{CODE}}">
+            <a href="#modal-video" class="js-modal-link" rel="nofollow" data-video-code-rus="{{CODERUS}}" data-video-code-eng="{{CODEENG}}">
                 <span class="title">Посмотрите <br class="tm">видео о&nbsp;нас<br><span class="play">Смотреть</span></span>
             </a>
         </div>
